RESOLVED FIXED82709
[BlackBerry] EventLoop::platformInit() obsolete.
https://bugs.webkit.org/show_bug.cgi?id=82709
Summary [BlackBerry] EventLoop::platformInit() obsolete.
Charles Wei
Reported 2012-03-30 02:51:25 PDT
EventLoop::platformInit() has been removed , we don't need to have an empty imp anymore. Remove it.
Attachments
This patch removes EventLoop::platformInit() (1.63 KB, patch)
2012-03-30 03:07 PDT, Charles Wei
rwlbuis: review+
Resubmit the patch after fixing comments from the reviewer. (1.63 KB, patch)
2012-03-30 04:44 PDT, Charles Wei
webkit.review.bot: commit-queue-
Resubmit after filling the reviewer info. (1.63 KB, patch)
2012-03-30 05:06 PDT, Charles Wei
no flags
Charles Wei
Comment 1 2012-03-30 03:07:38 PDT
Created attachment 134763 [details] This patch removes EventLoop::platformInit()
Rob Buis
Comment 2 2012-03-30 04:27:13 PDT
Comment on attachment 134763 [details] This patch removes EventLoop::platformInit() View in context: https://bugs.webkit.org/attachment.cgi?id=134763&action=review Ok. > Source/WebCore/ChangeLog:8 > + No new tests,build fix for BlackBerry porting. Add a space after ','.
Charles Wei
Comment 3 2012-03-30 04:44:14 PDT
Created attachment 134777 [details] Resubmit the patch after fixing comments from the reviewer.
WebKit Review Bot
Comment 4 2012-03-30 04:55:46 PDT
Comment on attachment 134777 [details] Resubmit the patch after fixing comments from the reviewer. Rejecting attachment 134777 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12291211
Charles Wei
Comment 5 2012-03-30 05:06:47 PDT
Created attachment 134782 [details] Resubmit after filling the reviewer info.
WebKit Review Bot
Comment 6 2012-03-30 06:12:39 PDT
Comment on attachment 134782 [details] Resubmit after filling the reviewer info. Clearing flags on attachment: 134782 Committed r112657: <http://trac.webkit.org/changeset/112657>
Charles Wei
Comment 7 2012-03-30 18:53:25 PDT
Resolved and patch landed.
Note You need to log in before you can comment on or make changes to this bug.