[BlackBerry] EventLoop::platformInit() obsolete. https://bugs.webkit.org/show_bug.cgi?id=82709

Reviewed by Rob Buis.

No new tests, build fix for BlackBerry porting.

* platform/blackberry/EventLoopBlackBerry.cpp:


Canonical link: https://commits.webkit.org/100044@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112657 268f45cc-cd09-0410-ab3c-d52691b4dbfc